k8s-manifests/dev/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: go-rest-api
  name: go-rest-api
spec:
  selector:
    matchLabels:
      app: go-rest-api
  template:
    spec:
      containers:
      - env:
        - name: TEST_KEY
          value: cameFromDevPatchDeploymentContainerEnvTestKey
        - name: service.logLevel
          value: panic
        - name: cluster
          value: cameFromDevPatchDeploymentContainerEnvCluster
        name: go-rest-api
