k8s-manifests/dev/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: go-rest-api
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    #- host: go-rest-api.dev.com
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-rest-api
                port:
                  number: 80
